--- a/.tigrc
+++ b/.tigrc
@@ -14,6 +14,7 @@ bind generic g move-first-line
 bind generic G move-last-line
 bind generic J move-next-merge
 bind generic K move-prev-merge
-bind generic <Ctrl-l> scroll-right
-bind generic <Ctrl-h> scroll-left
+bind generic l scroll-right
+bind generic h scroll-left
 bind generic y @bash -c "echo -n '%(commit)' | clip.exe"
+bind generic p @bash -c "git show-branch --sha1-name | grep '*' | grep -v '$(git rev-parse --abbrev-ref HEAD)' | grep '+' | head -1 | awk '{print $2}' | sed -r 's/^\\[(\\w+)\\]$/\\1/' | clip.exe"
